# uirapuruDSP

./: .editorconfig  .gitignore  =2.4.2  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
notebooks/exploratory/: 00_LB_READING-DATA_03032024.ipynb  01_LB_DATA-STATS_05022024.ipynb  ruido.csv  uirapuruDSP.code-workspace
notebooks/templates/: standard.ipynb
refs/: UIRAPURU_flow_NOGUI.grc
scripts/: fetch_data.py  nb_utils.py
src/uirapurudsp/: uirapurudsp.py
tests/: test_foo.py
