[tool.poetry]
name = "uirapurudsp"
version = "0.0.1"
description = "DSP in Uirapuru"
authors = ["Luciano Barosi <flbarosi@df.ufcg.edu.br>"]
repository = "https://github.com/lbarosi/uirapuruDSP"
documentation = "https://lbarosi.github.io/uirapuruDSP/"
readme = "README.md"
include = [
  { path = "scripts"}
  ]
packages = [
  {include = "uirapurudsp", from = "src"},
  {include = "scripts"},
]


[tool.poetry.dependencies]
python = ">=3.10,<4.0"
astropy = "*"
astroquery = "*"
dask = {extras = ["distributed"], version = "^2024.2.1"}
ipykernel = "*"
ipython = "*"
matplotlib = "*"
numpy = "*"
pandas = "*"
pytz = "*"
scikit-learn = "*"
scipy = "*"
python-dotenv = "^1.0.1"
lxml = "^5.1.0"
unidecode = "^1.3.8"
tzlocal = "^5.2"
ipynbname = "^2023.2.0.0"
pandas-stubs = "^2.2.0.240218"
types-requests = "^2.31.0.20240218"
dask-expr = "^0.5.3"
bokeh = "!=3.0.*,"
spectral-cube = "^0.6.5"
xarray = "^2024.2.0"

[tool.poetry.group.dev.dependencies]
deptry = "^0.12.0"
isort = "*"
mypy = "^1.5.1"
myst-parser = "*"
nox = "*"
pre-commit = "^3.4.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
rich = "*"
ruff = "*"
sphinx = "*"
sphinx_rtd_theme = "*"
tox = "^4.11.1"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["uirapurudsp"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py37"
line-length = 80
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["uirapurudsp"]


[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
